// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/stats has a default state 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces RESET 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "filtersInitialState": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "thing",
        "date",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
  "paramsInitialState": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces STATS_REQUEST 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "date",
        "thing",
      ],
    },
  },
  "isLoading": true,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces STATS_REQUEST_ERROR 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "date",
        "thing",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces STATS_REQUEST_SUCCESS 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "date",
        "thing",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces STATS_UPDATED 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "date",
        "thing",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;

exports[`reducers/stats reduces nothing 1`] = `
Object {
  "filters": Object {
    "items": Array [],
    "type": Object {
      "isActive": false,
      "isDisabled": false,
      "items": Array [
        "date",
        "thing",
      ],
    },
  },
  "isLoading": false,
  "items": Array [],
  "params": Object {
    "observation": Object {
      "isActive": false,
      "isDisabled": true,
      "isLoading": false,
      "items": Array [],
      "selectedItem": null,
    },
    "reset": Object {
      "isDisabled": true,
    },
    "type": Object {
      "isActive": false,
      "items": Array [
        "event",
        "measurement",
      ],
      "selectedItem": null,
    },
  },
}
`;
